# builderbench

./: .gitignore  LICENSE  README.md  pyproject.toml
builderbench/: build_block.py  build_block_play.py  constants.py  create_task_data.py  env_utils.py
builderbench/tasks/: cube-1.npz  cube-10.npz  cube-2.npz  cube-3.npz  cube-4.npz  cube-5.npz  cube-6.npz  cube-7.npz  cube-8.npz  cube-9.npz
builderbench/xmls/: 2f85.xml  scene.xml
impls/: crl.py  play_ppo_mega.py  play_ppo_sfl.py  ppo.py  ppo_rnd.py  sac.py  video.py
impls/utils/: buffer.py  evaluation.py  evaluation_play.py  networks.py  running_statistics.py  wrapper.py
notebooks/: bench.ipynb
